Improved tests & fix dependencies, bump to 1.0.3

--- a/test/dummy/app/views/pages/icons.html.erb
+++ b/test/dummy/app/views/pages/icons.html.erb
@@ -1,3 +1,7 @@
-<%= brk_icon "ruby" %>
+<%= brk_icon "ruby 2x" %>
 
 <%= brk_icon "rails" %>
+
+<%= brk_icon "python", text: "Fear the snake", right: true %>
+
+<%= brk_icon "mirlodev 4x", class: "pull-left" %>
